# streaming

./: .gitignore  README.md  pyproject.toml
sec5_efficiency/: README.md
sec5_efficiency/data_gen/: external_sample.py  formatting.py  gen_data_hotpotqa.py  gen_data_metamath.py  gen_data_multi.py  multi_agent_complete_system.py
sec5_efficiency/data_gen/script/: run.sh
sec5_efficiency/data_gen/shared_cache/: cache_block.py  combined_cache.py  shared_cache_manager.py
sec5_efficiency/infer/: infer.sh  infer_qwen3.py
sec5_efficiency/train/custom_datasets/: __init__.py  add_communication_tokens.py  build_data.py  build_data_simple.py  build_data_simple_unwrap.py  convert_to_iolist.py  filter_by_answer_match_multi.py  init_special_tokens.py  insert_tokens.py  merge_caches.py  merge_caches1.py  merge_qps_samples.py  multihead_dataset_26.py  process_extracted_results.py  sample_50rows_aggregation_110_leader_8_test.jsonl
sec6_security/: README.md
sec6_security/infer/: infer.py  infer.sh
sec6_security/train/: requirements.txt
sec7_monitorability/: README.md
sec7_monitorability/config/: baseline.yaml  baseline_32b.yaml  baseline_8b.yaml  baseline_qwen3_5_27b.yaml  baseline_qwen3_5_moe.yaml  qwen27b_coldn_pack7_lr2e5_trimbot_drop02_wd1e3_ep2.yaml
sec7_monitorability/eval/: demo_interactive.py  demo_stream.py  run_chat_benchmarks.py  stream_inference.py  test_interrupt.py
sec7_monitorability/scripts/: convert_lean_checkpoint.py
sec7_monitorability/tests/: test_deltanet_state.py  test_inference_parser.py  test_longce_channel_selection.py
(+132 files in other folders)
